pkl/tests/invalid/selfDependency.pkl
amends "../../TaskSpans.pkl"

traceID = "11111111111111111111111111111111"

spans {
  new TaskSpan {
    goName = "Self"
    name = "self"
    uuid = "11111111-1111-4111-8111-111111111111"
    traceID = "11111111111111111111111111111111"
    spanID = "1111111111111111"
    depends {
      new SpanRef {
        name = "self"
        uuid = "11111111-1111-4111-8111-111111111111"
        spanID = "1111111111111111"
      }
    }
  }
}
